# hadr-starter

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  dashboard.html  implementation-notes.md  index.html  landing.html  marketing-script.md  prd.html  pyproject.toml  requirements.txt
.github/workflows/: sitrep.yml
docs/adr/: 0001-hybrid-runtime.md  0002-three-behavior-cadence.md  0003-ledger-current-state-plus-published.md  0004-cross-feed-identity.md  0005-deployment-scheduled-agents.md  0006-state-store-sqlite-in-repo.md  0007-urgent-alert-push.md  0008-stack-python.md  README.md
fixtures/gdacs/: eq_padang.json  eq_two_glide.json  lifecycle_settled.json  lifecycle_temp.json  malformed.json  mixed_hazards.json  slice5_run1.json  slice5_run2.json  (+4 more)
hadr/: __init__.py  agent.py  alert.py  brief.py  briefer.py  clock.py  config.py  diff.py  fetch.py  gate.py  ledger.py  link_decisions.py  llm.py  matcher.py  model.py  pipeline.py  published.py  push.py  reliefweb.py  tools.py
prompts/: agent_system.md
scripts/: agent.py  brief.py  change_gate.py  chat.py  check_model.py  commit_state.py  fast_tick.sh  run.py
tests/: conftest.py  test_absence_floor.py  test_agent.py  test_agent_chat.py  test_alert.py  test_brief.py  test_brief_model.py  test_briefer.py  test_diff.py  test_fetch.py  test_fetch_edges.py  test_gate.py  test_gdacs_parse.py  test_ledger.py  test_ledger_edges.py  test_lifecycle.py  test_link_decisions.py  test_llm.py  test_matcher_gdacs.py  test_pipeline.py  test_pipeline_gdacs.py  test_run_cli.py  test_slice6_review.py  test_tools.py
(+19 files in other folders)
